@@ -1,3 +1,11 @@
+Wed Feb 14 18:53:57 2001  George Lebl <jirka@5z.com>
+
+	* configure.in, config/Makefile.am: Apply patch from peter@ximian.com
+	  (Peter Teichman), to generate config files from .in files during
+	  configure time, rather then install time
+
+	* gdm.spec.in: update for the above
+
 Tue Feb 13 18:27:03 2001  George Lebl <jirka@5z.com>
 
 	* daemon/display.c: Apply fix from "Matthias Clasen"
